pagina de emprestimos de livros conluida

--- a/adminEmprestarLivros.html
+++ b/adminEmprestarLivros.html
@@ -65,7 +65,7 @@
 
         <!-- Main Content -->
         <main class="content">
-            <div class="card " id="card-book-loan">
+            <div class="card card-mobile-none " id="card-book-loan">
                 <!-- Buscar Livro -->
                 <section class="search-section">
                     <label>Buscar livro:</label>
@@ -123,7 +123,7 @@
                     <label>Data de devolução:</label>
                     <input type="date" class="input date-input">
                 </section>
-
+                <div class="empty-space"></div>
                 <!-- Botão Concluir -->
                 <div class="action-section">
                     <button class="btn btn-submit">Concluir</button>
