--- a/adminCadastrarLivros.html
+++ b/adminCadastrarLivros.html
@@ -66,7 +66,7 @@
 
         <!-- Main Content -->
         <main class="content">
-            <div class="card form-container">
+            <div class="card card-mobile-none form-container">
                 <h1 class="form-title">Cadastrar Livros</h1>
 
                 <form class="book-form" id="bookForm">
@@ -110,7 +110,7 @@
                         </div>
                         <div class="form-column">
                             <div class="form-row">
-                                <div class="form-group " >
+                                <div class="form-group ">
                                     <label for="year">Ano de Lançamento</label>
                                     <input type="number" id="year" name="year" min="1000" max="2100" class="input">
                                 </div>
@@ -121,14 +121,14 @@
                                 </div>
                             </div>
                             <div class="form-row">
-                            <div class="form-group">
-                                <label for="location">Localização</label>
-                                <input type="text" id="location" name="location" class="input"
-                                    placeholder="EX: A, prateleira 5">
+                                <div class="form-group">
+                                    <label for="location">Localização</label>
+                                    <input type="text" id="location" name="location" class="input"
+                                        placeholder="EX: A, prateleira 5">
+                                </div>
                             </div>
                         </div>
-                        </div>
-                        
+
 
                     </div>
 
