menu links comecando

--- a/adminEmprestarLivros.html
+++ b/adminEmprestarLivros.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastrar Livros</title>
+    <title>Biblioteca</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="assets/css/global.css">
@@ -30,7 +30,7 @@
     <div class="layout">
         <nav id="sidebar" class="sidebar" aria-label="Menu lateral">
             <div class="nav-group">
-                <a class="nav-item active" href="#home">
+                <a class="nav-item active" href="adminHome.html">
                     <span class="material-symbols-outlined">home</span>
                     <span>Home</span>
                 </a>
@@ -45,8 +45,8 @@
                         <span class="material-symbols-outlined" id="icon-align-right"> keyboard_arrow_down</span>
                     </summary>
                     <div id="submenu-books" class="submenu" role="region" aria-label="Submenu Livros">
-                        <a href="#cadastrar">Cadastrar</a>
-                        <a href="#emprestar">Emprestar livros</a>
+                        <a href="adminCadastrarLivros.html">Cadastrar</a>
+                        <a href="adminEmprestarLivros.html">Emprestar livros</a>
                         <a href="#retirada">Retirada / Devolução de livros</a>
                         <a href="#historico">Histórico</a>
                         <a href="#listar">Listar todos</a>
@@ -92,8 +92,6 @@
                     </div>
                 </section>
 
-                <div class="divider"></div>
-
                 <!-- Buscar Aluno -->
                 <section class="search-section">
                     <label>Buscar Aluno:</label>
@@ -115,8 +113,6 @@
                         </div>
                     </div>
                 </section>
-
-                <div class="divider"></div>
 
                 <!-- Data de Devolução -->
                 <section class="date-section">
