--- a/adminCadastrarLivros.html
+++ b/adminCadastrarLivros.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastrar Livros</title>
+    <title>Biblioteca</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="assets/css/global.css">
@@ -30,7 +30,7 @@
     <div class="layout">
         <nav id="sidebar" class="sidebar" aria-label="Menu lateral">
             <div class="nav-group">
-                <a class="nav-item active" href="#home">
+                <a class="nav-item " href="adminHome.html">
                     <span class="material-symbols-outlined">home</span>
                     <span>Home</span>
                 </a>
@@ -41,12 +41,12 @@
                 <details class="accordion" id="books-acc">
                     <summary aria-controls="submenu-books" aria-expanded="false">
                         <span class="material-symbols-outlined">auto_stories</span>
-                        <span>Livros </span>
+                        <span >Livros </span>
                         <span class="material-symbols-outlined" id="icon-align-right"> keyboard_arrow_down</span>
                     </summary>
                     <div id="submenu-books" class="submenu" role="region" aria-label="Submenu Livros">
-                        <a href="#cadastrar">Cadastrar</a>
-                        <a href="#emprestar">Emprestar livros</a>
+                         <a href="adminCadastrarLivros.html" >Cadastrar</a>
+                        <a href="adminEmprestarLivros.html">Emprestar livros</a>
                         <a href="#retirada">Retirada / Devolução de livros</a>
                         <a href="#historico">Histórico</a>
                         <a href="#listar">Listar todos</a>
@@ -67,7 +67,7 @@
         <!-- Main Content -->
         <main class="content">
             <div class="card card-mobile-none form-container">
-                <h1 class="form-title">Cadastrar Livros</h1>
+                <h1 class="title">Cadastrar Livros</h1>
 
                 <form class="book-form" id="bookForm">
                     <div class="form-row">
@@ -128,11 +128,7 @@
                                 </div>
                             </div>
                         </div>
-
-
                     </div>
-
-
 
                     <div class="form-group">
                         <label for="synopsis">Sinopse <span class="optional">(opcional)</span></label>
