--- a/adminHome.html
+++ b/adminHome.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard - Biblioteca</title>
+    <title>Biblioteca</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="assets/css/global.css">
@@ -28,7 +28,7 @@
     <div class="layout">
         <nav id="sidebar" class="sidebar" aria-label="Menu lateral">
             <div class="nav-group">
-                <a class="nav-item active" href="#home">
+                <a class="nav-item active" href="adminHome.html">
                     <span class="material-symbols-outlined">home</span>
                     <span>Home</span>
                 </a>
@@ -37,14 +37,14 @@
             <div class="nav-group">
 
                 <details class="accordion" id="books-acc">
-                    <summary aria-controls="submenu-books" aria-expanded="false">
+                    <summary aria-controls="submenu-books " aria-expanded="false">
                         <span class="material-symbols-outlined">auto_stories</span>
                         <span>Livros </span>
                         <span class="material-symbols-outlined" id="icon-align-right"> keyboard_arrow_down</span>
                     </summary>
                     <div id="submenu-books" class="submenu" role="region" aria-label="Submenu Livros">
-                        <a href="#cadastrar">Cadastrar</a>
-                        <a href="#emprestar">Emprestar livros</a>
+                        <a href="adminCadastrarLivros.html">Cadastrar</a>
+                        <a href="adminEmprestarLivros.html">Emprestar livros</a>
                         <a href="#retirada">Retirada / Devolução de livros</a>
                         <a href="#historico">Histórico</a>
                         <a href="#listar">Listar todos</a>
