menu correcao do estado ativo no css

--- a/adminEmprestarLivros.html
+++ b/adminEmprestarLivros.html
@@ -38,8 +38,9 @@
 
             <div class="nav-group">
 
+                <!-- preciso de colocar a classe active aqui -->
                 <details class="accordion" id="books-acc">
-                    <summary aria-controls="submenu-books" aria-expanded="false">
+                    <summary aria-controls="submenu-books active" aria-expanded="false">
                         <span class="material-symbols-outlined">auto_stories</span>
                         <span>Livros </span>
                         <span class="material-symbols-outlined" id="icon-align-right"> keyboard_arrow_down</span>
