--- a/adminCadastrarLivros.html
+++ b/adminCadastrarLivros.html
@@ -39,7 +39,7 @@
             <div class="nav-group">
 
                 <details class="accordion" id="books-acc">
-                    <summary aria-controls="submenu-books" aria-expanded="false">
+                    <summary aria-controls="submenu-books" class="active" aria-expanded="false">
                         <span class="material-symbols-outlined">auto_stories</span>
                         <span >Livros </span>
                         <span class="material-symbols-outlined" id="icon-align-right"> keyboard_arrow_down</span>
