subindo pag de validacao de usuarios

--- a/adminLivroInfo.html
+++ b/adminLivroInfo.html
@@ -66,64 +66,51 @@
         <!-- Main Content -->
         <main class="content">
             <div class="card card-mobile-none " id="card-book-loan">
-                <!-- Buscar Livro -->
-                <section class="search-section">
-                    <label>Buscar livro:</label>
-                    <div class="search-box">
-                        <input type="text" placeholder="Busque pelo nome do livro" class="input">
-                        <button class="search-btn">
-                            <i class="fas fa-search"></i>
-                        </button>
-                    </div>
 
-                    <div class="info-fields">
-                        <div class="info-row">
-                            <label>Livro:</label>
-                            <span class="info-value"></span>
-                        </div>
-                        <div class="info-row">
-                            <label>Autor:</label>
-                            <span class="info-value"></span>
-                        </div>
-                        <div class="info-row">
-                            <label>Status:</label>
-                            <span class="info-value"></span>
-                        </div>
-                    </div>
-                </section>
-
-                <!-- Buscar Aluno -->
-                <section class="search-section">
-                    <label>Buscar Aluno:</label>
-                    <div class="search-box">
-                        <input type="text" placeholder="Busque pelo RA" class="input">
-                        <button class="search-btn">
-                            <i class="fas fa-search"></i>
-                        </button>
-                    </div>
-
-                    <div class="info-fields">
-                        <div class="info-row">
-                            <label>Nome:</label>
-                            <span class="info-value"></span>
-                        </div>
-                        <div class="info-row">
-                            <label>Ra:</label>
-                            <span class="info-value"></span>
-                        </div>
-                    </div>
-                </section>
-
-                <!-- Data de Devolução -->
-                <section class="date-section">
-                    <label>Data de devolução:</label>
-                    <input type="date" class="input date-input">
-                </section>
-                <div class="empty-space"></div>
-                <!-- Botão Concluir -->
-                <div class="action-section">
-                    <button class="btn btn-submit">Concluir</button>
+                <div >
+                    <h2 class="title">Título</h2>
                 </div>
+
+                <div class="book-details">
+                    <div class="detail-row">
+                        <span class="label">Autor:</span>
+                        <span class="detail-value"></span>
+                    </div>
+
+                    <div class="detail-row">
+                        <span class="label">Categoria:</span>
+                        <span class="detail-value"></span>
+                    </div>
+
+                    <div class="detail-row">
+                        <span class="label">Ano de Lançamento:</span>
+                        <span class="detail-value"></span>
+                    </div>
+
+                    <div class="detail-row status-row">
+                        <span class="label">Status: <span class="text-success">Disponível</span></span>
+                    </div>
+
+                    <div class="detail-row">
+                        <span class="label">Quantidade:</span>
+                        <span class="detail-value"></span>
+                    </div>
+
+                    <div class="detail-row">
+                        <span class="label">Quantidade Disponível:</span>
+                        <span class="detail-value"></span>
+                    </div>
+
+                    <div class="detail-row">
+                        <span class="label">Localização:</span>
+                        <span class="detail-value"></span>
+                    </div>
+                </div>
+
+                <div class="synopsis-section">
+                    <div class="synopsis-box"></div>
+                </div>
+
             </div>
 
         </main>
