--- a/usuarioHistorico.html
+++ b/usuarioHistorico.html
@@ -60,7 +60,7 @@
           <div class="book-author">autor:</div>
           <div class="book-date">
             Data de entrega: 00/00/0000
-            <span class="book-status book-status--with-me">Comigo</span>
+            <span class="badge book-status badge-status--info">Comigo</span>
           </div>
         </div>
         <div class="book-history-card">
@@ -68,7 +68,7 @@
           <div class="book-author">autor:</div>
           <div class="book-date">
             Data de entrega: 00/00/0000
-            <span class="book-status book-status--returned">Entregue</span>
+            <span class="badge book-status badge-status--success">Entregue</span>
           </div>
         </div>
         <div class="book-history-card">
@@ -76,7 +76,7 @@
           <div class="book-author">autor:</div>
           <div class="book-date">
             Data de entrega: 00/00/0000
-            <span class="book-status book-status--returned">Entregue</span>
+            <span class="badge book-status badge-status--success">Entregue</span>
           </div>
         </div>
         <div class="book-history-card">
@@ -84,7 +84,7 @@
           <div class="book-author">autor:</div>
           <div class="book-date">
             Data de entrega: 00/00/0000
-            <span class="book-status book-status--pending ">Pendente</span>
+            <span class="badge book-status badge-status--warning">Pendente</span>
           </div>
         </div>
         <div class="book-history-card">
@@ -92,7 +92,7 @@
           <div class="book-author">autor:</div>
           <div class="book-date">
             Data de entrega: 00/00/0000
-            <span class="book-status book-status--late">Em atraso</span>
+            <span class="badge book-status badge-status--danger">Em atraso</span>
           </div>
         </div>
       </div>
