--- a/adminValidarUsuarios.html
+++ b/adminValidarUsuarios.html
@@ -9,170 +9,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/admin.css">
-    <style>
-        .card {
-            padding: 24px;
-        }
 
-        .card-table-header {
-            margin-bottom: 8px;
-            width: 100%;
-            display: flex;
-            align-items: flex-start;
-            flex-direction: row;
-            gap: 2%;
-        }
-
-        div.table-text {
-            flex: 1;
-        }
-
-        .card p {
-            color: #555;
-            font-size: 0.9em;
-            margin-bottom: 20px;
-        }
-
-        .card p span {
-            color: #16a34a;
-            font-weight: bold;
-        }
-
-        .search-box {
-            width: 30%;
-            display: flex;
-            justify-content: flex-start;
-            margin-bottom: 15px;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            font-size: 0.9em;
-        }
-
-        th,
-        td {
-            padding: 10px;
-            text-align: left;
-            border-bottom: 1px solid #eee;
-        }
-
-        th {
-            background: #f8f8f8;
-            color: #555;
-        }
-
-        /* Linhas alternadas da tabela */
-        .table-striped tbody tr:nth-child(odd) {
-            background-color: #ffffff;
-        }
-
-        .table-striped tbody tr:nth-child(even) {
-            background-color: #f9f9f9;
-        }
-
-        .table-striped tbody tr:hover {
-            background-color: #f3e8ff;
-            transition: background 0.2s;
-        }
-
-        .status {
-            display: flex;
-            align-items: center;
-            gap: 6px;
-        }
-
-        .dot {
-            width: 8px;
-            height: 8px;
-            border-radius: 50%;
-            background: #facc15;
-        }
-
-        .btn-ativar {
-            background: #16a34a;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            padding: 6px 14px;
-            cursor: pointer;
-            transition: background 0.2s;
-        }
-
-        .btn-ativar:hover {
-            background: #15803d;
-        }
-
-        /* Contêiner da tabela */
-        .table-container {
-            width: 100%;
-            overflow-x: auto;
-        }
-
-        /* ====== responsividade card e tabela ====== */
-        @media (max-width: 768px) {
-            .card-table-header {
-                flex-direction: column;
-            }
-
-            .search-box {
-                width: 100%;
-            }
-
-            .responsive-table thead {
-                display: none;
-            }
-
-            .responsive-table,
-            .responsive-table tbody,
-            .responsive-table tr,
-            .responsive-table td {
-                display: block;
-                width: 100%;
-            }
-
-            .responsive-table tr {
-                margin-bottom: 15px;
-                background: #fff;
-                border-radius: 8px;
-                box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
-                padding: 10px;
-            }
-
-            .responsive-table td {
-                text-align: right;
-                padding: 10px 8px;
-                border: none;
-                position: relative;
-            }
-
-            .responsive-table td::before {
-                content: attr(data-label);
-                position: absolute;
-                left: 10px;
-                width: 50%;
-                text-align: left;
-                font-weight: bold;
-                color: #555;
-            }
-
-            .responsive-table .status {
-                justify-content: flex-end;
-                padding: 10px 8px;
-                border: none;
-            }
-
-            .responsive-table td:last-child {
-                text-align: center;
-                margin-top: 10px;
-            }
-
-            .search-box {
-                width: 100%;
-            }
-        }
-    </style>
 </head>
 
 <body>
@@ -226,7 +63,7 @@
 
         <!-- Main Content -->
         <main class="content">
-            <div class="card card-mobile-none">
+            <div class="card card-table card-mobile-none">
                 <div class="card-table-header">
                     <div class="table-text">
                         <h2>Validar Usuários</h2>
@@ -294,32 +131,9 @@
                 </div>
             </div>
         </main>
+    </div>
 
-        <script>
-            const searchInput = document.getElementById('searchInput');
-            const rows = document.querySelectorAll('#userTable tbody tr');
 
-            searchInput.addEventListener('input', function () {
-                const value = this.value.toLowerCase();
-                rows.forEach(row => {
-                    const ra = row.cells[0].textContent.toLowerCase();
-                    row.style.display = ra.includes(value) ? '' : 'none';
-                });
-            });
-
-            const buttons = document.querySelectorAll('.btn-ativar');
-            buttons.forEach(btn => {
-                btn.addEventListener('click', () => {
-                    const statusCell = btn.closest('tr').querySelector('.status span');
-                    const dot = btn.closest('tr').querySelector('.dot');
-                    statusCell.textContent = 'Ativo';
-                    dot.style.background = '#22c55e';
-                    btn.disabled = true;
-                    btn.style.background = '#ccc';
-                    btn.textContent = 'Ativado';
-                });
-            });
-        </script>
 </body>
 
 </html>
