--- a/adminLivrosRetiradaDevolucao.html
+++ b/adminLivrosRetiradaDevolucao.html
@@ -66,11 +66,10 @@
             <div class="card card-table card-mobile-none">
                 <div class="card-table-header">
                     <div class="table-text">
-                        <h2>Validar Usuários</h2>
-                        <p>Clique em <span>ativar</span> para validar os usuários cadastrados</p>
+                        <h2>Retirada e devolução de livros</h2>
                     </div>
                     <div class="search-box">
-                        <input type="text" class="input " placeholder="Buscar pelo RA">
+                        <input type="text" class="input" placeholder="Buscar pelo RA">
                     </div>
                 </div>
 
@@ -79,66 +78,31 @@
                         <thead>
                             <tr>
                                 <th>RA</th>
-                                <th>Nome</th>
-                                <th>E-mail</th>
-                                <th>Data de cadastro</th>
-                                <th>Status do cadastro</th>
+                                <th>Aluno</th>
+                                <th>Título do livro</th>
+                                <th>Data de solicitação</th>
+                                <th>Localização</th>
+                                <th>Tipo de ação</th>
                                 <th>Ações</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td data-label="RA"><strong>2023101</strong></td>
-                                <td data-label="Nome">Maria Silva</td>
-                                <td data-label="E-mail">maria@email.com</td>
-                                <td data-label="Data de cadastro">12/04/2024</td>
-                                <td data-label="Status do cadastro">
+                                <td><strong>2023101</strong></td>
+                                <td>nome do aluno</td>
+                                <td>nome do livro</td>
+                                <td>12/07/2025</td>
+                                <td>Retirada</td>
+                                <td>
                                     <div class="status">
                                         <div class="dot"></div>
                                         <span>Pendente</span>
                                     </div>
                                 </td>
-                                <td data-label="Ações"><button class="btn btn-table btn-success">Ativar</button></td>
+                                <td data-label="Ações"><button class="btn btn-ativar btn-success">Confirmar retirada</button></td>
                             </tr>
-                            <tr>
-                                <td data-label="RA"><strong>2023102</strong></td>
-                                <td data-label="Nome">João Pereira</td>
-                                <td data-label="E-mail">joao@email.com</td>
-                                <td data-label="Data de cadastro">15/04/2024</td>
-                                <td data-label="Status do cadastro">
-                                    <div class="status">
-                                        <div class="dot"></div>
-                                        <span>Pendente</span>
-                                    </div>
-                                </td>
-                                <td data-label="Ações"><button class="btn btn-table btn-success">Ativar</button></td>
-                            </tr>
-                            <tr>
-                                <td data-label="RA"><strong>2023102</strong></td>
-                                <td data-label="Nome">João Pereira</td>
-                                <td data-label="E-mail">joao@email.com</td>
-                                <td data-label="Data de cadastro">15/04/2024</td>
-                                <td data-label="Status do cadastro">
-                                    <div class="status">
-                                        <div class="dot"></div>
-                                        <span>Pendente</span>
-                                    </div>
-                                </td>
-                                <td data-label="Ações"><button class="btn btn-table btn-success">Ativar</button></td>
-                            </tr>
-                            <tr>
-                                <td data-label="RA"><strong>2023103</strong></td>
-                                <td data-label="Nome">Ana Costa</td>
-                                <td data-label="E-mail">ana@email.com</td>
-                                <td data-label="Data de cadastro">18/04/2024</td>
-                                <td data-label="Status do cadastro">
-                                    <div class="status">
-                                        <div class="dot"></div>
-                                        <span>Pendente</span>
-                                    </div>
-                                </td>
-                                <td data-label="Ações"><button class="btn btn-table btn-success">Ativar</button></td>
-                            </tr>
+                            
+                            
                         </tbody>
                     </table>
                 </div>
