--- a/adminValidarUsuarios.html
+++ b/adminValidarUsuarios.html
@@ -66,7 +66,7 @@
             <div class="card card-table card-mobile-none">
                 <div class="card-table-header">
                     <div class="table-text">
-                        <h2>Validar Usuários</h2>
+                        <h2 class="title text-start">Validar Usuários</h2>
                         <p>Clique em <span>ativar</span> para validar os usuários cadastrados</p>
                     </div>
                     <div class="search-box">
