--- a/adminLivrosRetiradaDevolucao.html
+++ b/adminLivrosRetiradaDevolucao.html
@@ -66,7 +66,7 @@
             <div class="card card-table card-mobile-none">
                 <div class="card-table-header">
                     <div class="table-text">
-                        <h2 class="title">Retirada e devolução de livros</h2>
+                        <h2 class="title text-start">Retirada e devolução de livros</h2>
                     </div>
                     <div class="search-box">
                         <input type="text" class="input" placeholder="Buscar pelo RA">
