--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <h1 class="title-login">Login</h1>
             <!-- formulario -->
             <form class="form-login">
-                <label for="email" class="label-login">E-mail</label>
-                <input type="email" id="email" name="email" class="input-primary input-login" autocomplete="username"
+                <label for="email" class="label">E-mail</label>
+                <input type="email" id="email" name="email" class=" input input-primary input-full" autocomplete="username"
                     required>
-                <label for="senha" class="label-login">Senha</label>
+                <label for="senha" class="label">Senha</label>
                 <div class="password-container">
-                    <input type="password" id="senha" name="senha" class="input-primary input-login"
+                    <input type="password" id="senha" name="senha" class="input input-primary input-full"
                         autocomplete="current-password" required>
                     <button type="button" class="toggle-btn" id="toggleSenha">
                         <span class="material-symbols-outlined">visibility</span>
