pag cadastro usuario ajustes

--- a/usuarioCadastro.html
+++ b/usuarioCadastro.html
@@ -17,15 +17,15 @@
             <h1 class="title-login">Cadastro</h1>
             <!-- formulario -->
             <form class="form-login">
-                <label for="nome" class="label-login">Nome</label>
-                <input type="text" id="nome" name="nome" class="input-primary input-login" required>
-                <label for="ra" class="label-login">RA</label>
-                <input type="text" id="ra" name="ra" class="input-primary input-login" required>
-                <label for="email" class="label-login">E-mail</label>
-                <input type="email" id="email" name="email" class="input-primary input-login" autocomplete="username" required>
-                <label for="senha" class="label-login">Senha</label>
+                <label for="nome" class="label">Nome</label>
+                <input type="text" id="nome" name="nome" class="input input-primary input-full" required>
+                <label for="ra" class="label">RA</label>
+                <input type="text" id="ra" name="ra" class="input input-primary input-full" required>
+                <label for="email" class="label">E-mail</label>
+                <input type="email" id="email" name="email" class="input input-primary input-full" autocomplete="username" required>
+                <label for="senha" class="label">Senha</label>
                 <div class="password-container">
-                    <input type="password" id="senha" name="senha" class="input-primary input-login" autocomplete="new-password"
+                    <input type="password" id="senha" name="senha" class="input input-primary input-full" autocomplete="new-password"
                         required>
                     <button type="button" class="toggle-btn" id="toggleSenha">
                         <span class="material-symbols-outlined">visibility</span>
