--- a/index.html
+++ b/index.html
@@ -17,23 +17,13 @@
             <h1 class="title-login">Login</h1>
             <!-- formulario -->
             <form class="form-login">
-                <label for="email" class="label">E-mail</label>
-                <input type="email" id="email" name="email" class=" input input-primary input-full" autocomplete="username"
-                    required>
-                <label for="senha" class="label">Senha</label>
-                <div class="password-container">
-                    <input type="password" id="senha" name="senha" class="input input-primary input-full"
-                        autocomplete="current-password" required>
-                    <button type="button" class="toggle-btn" id="toggleSenha">
-                        <span class="material-symbols-outlined">visibility</span>
-                    </button>
-                </div>
-                <button type="submit" class="btn btn-login">Entrar</button>
+                <label for="label telefone-login">Telefone</label>
+                <input type="tel" id="telefone-login" name="telefone" class="input input-primary" placeholder="+55 (DDD) 99999-9999" required>
+                <button type="submit" class="btn btn-full">Enviar código</button>
             </form>
             <!-- fim formulario -->
             <div class="links-login">
                 <a href="usuarioCadastro.html" class="links">Cadastre-se</a>
-                <a href="recuperacaoSenha.html" class="links">Esqueceu a senha?</a>
             </div>
         </section>
         <!-- fim card de login -->
