--- a/usuarioCadastro.html
+++ b/usuarioCadastro.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="assets/css/global.css">
-    </head>
+</head>
 
 <body>
     <div class="content-full flex">
@@ -18,20 +18,18 @@
             <!-- formulario -->
             <form class="form-login">
                 <label for="nome" class="label">Nome</label>
-                <input type="text" id="nome" name="nome" class="input input-primary input-full" required>
+                <input type="text" id="nome" name="nome" class="input input-primary " required>
+
                 <label for="ra" class="label">RA</label>
-                <input type="text" id="ra" name="ra" class="input input-primary input-full" required>
+                <input type="text" id="ra" name="ra" class="input input-primary " required>
+
                 <label for="email" class="label">E-mail</label>
-                <input type="email" id="email" name="email" class="input input-primary input-full" autocomplete="username" required>
-                <label for="senha" class="label">Senha</label>
-                <div class="password-container">
-                    <input type="password" id="senha" name="senha" class="input input-primary input-full" autocomplete="new-password"
-                        required>
-                    <button type="button" class="toggle-btn" id="toggleSenha">
-                        <span class="material-symbols-outlined">visibility</span>
-                    </button>
-                </div>
-                <button type="submit" class="btn btn-login">Salvar</button>
+                <input type="email" id="email" name="email" class="input input-primary " required>
+
+                <label for="telefone" class="label">Telefone</label>
+                <input type="tel" id="telefone" name="telefone" class="input input-primary " placeholder="+55 (DDD) 99999-9999" required>
+
+                <button type="submit" class="btn btn-full">Salvar</button>
             </form>
             <!-- fim do formulario -->
             <div class="links-login">
