--- a/usuarioHome.html
+++ b/usuarioHome.html
@@ -57,13 +57,11 @@
         <!-- conteudo principal -->
         <main class="content " role="main">
             <!-- barra de busca -->
-            <section class="search-bar">
-                <form class="search-form">
-                    <input type="text" class="input-primary input-search" placeholder="Buscar por título">
-                    <button type="submit" class="btn btn-search">
-                        <span class="material-symbols-outlined">search</span>
-                    </button>
-                </form>
+            <section class="search-box">
+                <input type="text" class="search-input" placeholder="Busque o livro por título ou autor">
+                <button class="search-btn" aria-label="Buscar">
+                    <span class="material-symbols-outlined">search</span>
+                </button>
             </section>
             <!-- fim da barra de busca -->
             <!-- seção de livros -->
