--- a/usuarioHome.html
+++ b/usuarioHome.html
@@ -67,7 +67,7 @@
             <!-- seção de livros -->
             <section class="books-section">
                 <div class="section-header">
-                    <h2 class="section-title">Nome da seção</h2>
+                    <h2 class=" subtitle">Nome da seção</h2>
                     <a href="#" class="see-more">
                         ver mais <span class="material-symbols-outlined">chevron_right</span>
                     </a>
