--- a/usuarioLivroEmprestar.html
+++ b/usuarioLivroEmprestar.html
@@ -26,20 +26,14 @@
         <!-- menu lateral -->
         <nav id="sidebar" class="sidebar" aria-label="Menu lateral">
             <div class="nav-group">
-                <a class="nav-item active" href="#home">
-                    <span class="material-symbols-outlined">home</span>
-                    <span>Home</span>
-                </a>
-            </div>
-            <div class="nav-group">
-                <a class="nav-item " href="#buscar-livros">
-                    <span class="material-symbols-outlined">home</span>
+                <a class="nav-item active" href="usuarioHome.html">
+                    <span class="material-symbols-outlined">menu_book</span>
                     <span>Buscar livros</span>
                 </a>
             </div>
             <div class="nav-group">
-                <a class="nav-item " href="#meus-livros">
-                    <span class="material-symbols-outlined">home</span>
+                <a class="nav-item " href="usuarioHistorico.html">
+                    <span class="material-symbols-outlined">library_books</span>
                     <span>Meus livros</span>
                 </a>
             </div>
@@ -64,11 +58,11 @@
                 <div class="info-book-top-flex">
                     <img src="assets/img/capa-livro.jpg" alt="Capa do Livro" class="info-book-cover">
                     <div class="info-book-details">
-                        <h2 class="info-book-title">Nome do Livro</h2>
+                        <h2 class="info-book-title title">Nome do Livro</h2>
                         <div class="info-book-author">Autor do livro</div>
                         <div class="emprestar-datas">
-                            <strong>Data de empréstimo:</strong> 00/00/0000<br>
-                            <strong>Data de devolução:</strong> 00/00/0000
+                            <strong class="label">Data de empréstimo:</strong> 00/00/0000<br>
+                            <strong class="label">Data de devolução:</strong> 00/00/0000
                         </div>
                     </div>
                 </div>
