--- a/usuarioLivroInformacoes.html
+++ b/usuarioLivroInformacoes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Informações do Livro</title>
+    <title>Biblioteca</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="assets/css/global.css">
@@ -12,7 +12,7 @@
 </head>
 
 <body class="body-color">
-    <!-- menu -->
+   <!-- menu -->
     <header class="topbar" role="banner">
         <button class="hamburger" aria-label="Abrir menu" aria-controls="sidebar" aria-expanded="false">
             <span class="material-symbols-outlined">menu</span>
@@ -26,14 +26,14 @@
         <!-- menu lateral -->
         <nav id="sidebar" class="sidebar" aria-label="Menu lateral">
             <div class="nav-group">
-                <a class="nav-item " href="usuarioHome.html">
-                    <span class="material-symbols-outlined">home</span>
+                <a class="nav-item active" href="usuarioHome.html">
+                    <span class="material-symbols-outlined">menu_book</span>
                     <span>Buscar livros</span>
                 </a>
             </div>
             <div class="nav-group">
                 <a class="nav-item " href="usuarioHistorico.html">
-                    <span class="material-symbols-outlined">home</span>
+                    <span class="material-symbols-outlined">library_books</span>
                     <span>Meus livros</span>
                 </a>
             </div>
@@ -58,11 +58,11 @@
                 <div class="info-book-top-flex">
                     <img src="assets/img/capa-livro.jpg" alt="Capa do Livro" class="info-book-cover">
                     <div class="info-book-details">
-                        <h2 class="info-book-title">Nome do Livro</h2>
+                        <h2 class="info-book-title title">Nome do Livro</h2>
                         <div class="info-book-author">Autor do livro</div>
                         <div class="info-book-genres">
-                            <span class="info-book-genre">gênero</span>
-                            <span class="info-book-genre">gênero</span>
+                            <span class="badge badge-outline">gênero</span>
+                            <span class="badge badge-outline">gênero</span>
                         </div>
                     </div>
                 </div>
