--- a/usuarioLivroResultadoBusca.html
+++ b/usuarioLivroResultadoBusca.html
@@ -80,31 +80,36 @@
                             <div class="book-title">Livro 1</div>
                             <div class="book-author">Autor 1</div>
                         </div>
-                    </div><div class="book-card">
+                    </div>
+                    <div class="book-card">
                         <div class="book-cover"></div>
                         <div class="book-info">
                             <div class="book-title">Livro 1</div>
                             <div class="book-author">Autor 1</div>
                         </div>
-                    </div><div class="book-card">
+                    </div>
+                    <div class="book-card">
                         <div class="book-cover"></div>
                         <div class="book-info">
                             <div class="book-title">Livro 1</div>
                             <div class="book-author">Autor 1</div>
                         </div>
-                    </div><div class="book-card">
+                    </div>
+                    <div class="book-card">
                         <div class="book-cover"></div>
                         <div class="book-info">
                             <div class="book-title">Livro 1</div>
                             <div class="book-author">Autor 1</div>
                         </div>
-                    </div><div class="book-card">
+                    </div>
+                    <div class="book-card">
                         <div class="book-cover"></div>
                         <div class="book-info">
                             <div class="book-title">Livro 1</div>
                             <div class="book-author">Autor 1</div>
                         </div>
-                    </div><div class="book-card">
+                    </div>
+                    <div class="book-card">
                         <div class="book-cover"></div>
                         <div class="book-info">
                             <div class="book-title">Livro 1</div>
@@ -112,8 +117,8 @@
                         </div>
                     </div>
                 </div>
-               
-                
+
+
             </section>
             <!-- fim da seção de livros -->
         </main>
